--- a/Backend/demo/src/main/resources/application.yml
+++ b/Backend/demo/src/main/resources/application.yml
@@ -6,3 +6,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+  mvc:
+    cors:
+      allowed-origins: "http://localhost:5173"
+      allowed-methods: GET, POST, PUT, DELETE
+      allowed-headers: "*"
